[tool.poetry]
name = "aremdashr-protein"
version = "0.1.0"
description = ""
authors = ["rbiju <raymondbiju@gmail.com>"]
readme = "README.md"
packages = [{include = "aremdashr_protein"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
